# payback_recruitment

./: .env-template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/application/dto/: project_dto.py  task_dto.py
app/application/use_cases/project_use_cases/: complete_project.py  create_project.py  project_use_case.py  update_project.py
app/application/use_cases/task_use_cases/: complete_task.py  create_task.py  get_filtered_tasks.py  link_task_to_project.py  reopen_task.py  task_use_case.py  unlink_task_from_project.py  update_task.py
app/domain/: events.py  exceptions.py
app/domain/entities/: project.py  task.py
app/domain/event_handlers/: __init__.py  project_deadline_changed.py
app/domain/repositories/: project_repository.py  task_repository.py
app/domain/services/: deadline_enforcement_service.py  project_completion_service.py
app/infrastructure/: config.py
app/infrastructure/api/: dependencies.py  exception_handler.py  main.py
app/infrastructure/api/routers/: project_router.py  task_router.py
app/infrastructure/api/schemas/: project_schemas.py  task_schemas.py
app/infrastructure/persistence/: engine.py
app/infrastructure/persistence/models/: base.py  models.py  types.py
app/infrastructure/persistence/repositories/: exceptions.py  sqlalchemy_project_repository.py  sqlalchemy_task_repository.py
tests/: utils.py
tests/integration/infrastructure/api/: conftest.py
tests/unit/: conftest.py
tests/unit/domain/entities/: test_project.py  test_task.py
tests/unit/domain/event_handlers/: project_deadline_changed.py
(+6 files in other folders)
