[project]
name = "payback_recruitment"
description = "Backend for PAYBACK recruitment application"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.11.10",
    "sqlmodel==0.0.25",
    "pydantic_settings==2.11.0",
    "fastapi[standard]==0.118.0",
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "pytest==8.4.2",
    "pytest_mock==3.15.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
